
 zenTrack is a top quality, simple, and elegant 
 tracking system for small to medium-large companies.
 Clean, simple interface, fully adaptable administration,
 100 percent object oriented and database abstracted. 

----- V2.2.3 (development, see CVS) ----
2003-02-15, Altman
  Completed the get_notify_recipients($ticket_id) method of the zenTrack
  class.  It has been tested and fits the give requirements.
    - includes/zenTrack.class v1.48
  The rest of the functions have been filled out and put through some quick 
  sanity testing.  Needs some more thourough testing probably.
    - includes/zenTrack.class v1.49

2003-02-14, Altman
  Stubbed out functions in zenTrack.class and added entry for new table
  in configVars.php.default.
    - install/configVars.php.default v1.2
    - includes/zenTrack.class v1.47
  Added schema changes to support Notify List feature addition.
    - install/UPGRADE_postgres.sql v1.5
    - install/UPGRADE_mysql.sql v1.4
    - install/UPGRADE_oracle.sql v1.4
    - install/UPGRADE_SEED_postgres.sql v1.1
    - install/UPGRADE_SEED_mysql.sql v1.2
    - install/UPGRADE_SEED_oracle.sql v1.1
    - install/build_postgres.sql v1.5
    - install/build_mysql.sql v1.4
    - install/build_oracle.sql v1.5
    - install/seed_postgres.sql v1.5
    - install/seed_mysql.sql v1.9
    - install/seed_oracle.sql v1.6
    - install/previous/2.2.2.1.UPGRADE_postgres.sql v1.1
    - install/previous/2.2.2.1.UPGRADE_mysql.sql v1.1
    - install/previous/2.2.2.1.UPGRADE_oracle.sql v1.1

2003-02-15, Kato
  Fixed problem displaying bins with quotes in name
    - includes/templates/binForm.php v1.3

2003-02-14, Kato
  Abstracted actions from actionApplicable and checkAccess
  This is in preparation for db/administrative tools for these
  As well as upcoming functions/enhancements
    - includes/zenTrack.class v1.45
  Fixed problem with changing bins while viewing ticket
  (fatal error: zenTrack.class cannot be redefined)
    - www/index.php v1.7    
