@@ -26,7 +26,8 @@
              (This will get you a response, probably in hours, maybe in days)
 
     email  - phpzen@users.sourceforge.net
-             (you may get a response if I'm bored, maybe in hours, maybe never)
+             (if you are a registered tester, you will get a reply.. otherwise
+              you may get a response if I'm bored, maybe in hours, maybe never)
 
     irc    - zentrack now has a home on irc.sourceforge.net, #zentrack, this may
    	     be a good place to find some help with more in depth issues.
